# max30102-demo

./: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  west.yml
boards/: adafruit_feather_nrf52840.overlay  nrf52dk_nrf52832.overlay
src/: main.c  simple.proto
